--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -134,6 +134,22 @@
     }
 }
 
+.contactLink {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #111;
+    text-decoration: none;
+
+    &:visited,
+    &:hover,
+    &:active,
+    &:focus {
+        color: #111;
+        text-decoration: none;
+    }
+}
+
 .cardEmail {
     width: 100%;
     max-width: 860px;
@@ -169,6 +185,15 @@
     &:hover {
         color: #FFF;
         background-color: #5b6db9;
+    }
+}
+
+.interactiveBtn {
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+
+    &:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 12px 24px rgba(106, 127, 219, 0.24);
     }
 }
 
